--- a/FigurineCuisine/Pages/Checkout/Cart.cshtml
+++ b/FigurineCuisine/Pages/Checkout/Cart.cshtml
@@ -10,42 +10,36 @@
     <h1 class="text-left">
         My Cart
     </h1>
-    @foreach (var item in Model.CartItems)
+    @foreach (var item in Model.CartItem)
     {
-        @foreach (var figurine in Model.Figurines)
-        {
-            @if (figurine.ID == item.ID)
-            {
-            <div class="row">
-                <div class="col-md-3">
-                
+        <div class="row">
+            <div class="col-md-3">
+                <a href="/Shop/Product/@item.Figurine.ID">
                     <img src="@Html.DisplayFor(modelItem => item.Figurine.Image)" width="250" height="250" />
-                
-                </div>
-                <div class="col-md-9">
-                    <form class="form-row" method="post">
-                        <div class="form-group col-md-8">
-                            <h3>@item.Figurine.Brand</h3>
-                            <label asp-for="@item.Quantity">Quantity</label>
-                            <input asp-for="@item.Quantity" type="number" name="Quantity">
-                            <p>$@(item.Figurine.Price * item.Quantity)</p>
-                        </div>
-                        <div class="form-group col-md-4">
-                            <button type="submit" class="btn btn-outline-primary" asp-page-handler="update" asp-route-id="@item.FigurineID">
-                                Update
-                            </button>
-                            <button type="submit" class="btn btn-outline-danger" asp-page-handler="delete" asp-route-id="@item.FigurineID">
-                                Delete
-                            </button>
-                        </div>
-                    </form>
-                </div>
+                </a>
             </div>
-            }
-        }
+            <div class="col-md-9">
+                <form class="form-row" method="post">
+                    <div class="form-group col-md-8">
+                        <h3>@item.Figurine.Name</h3>
+                        <label asp-for="@item.Quantity">Quantity</label>
+                        <input asp-for="@item.Quantity" type="number" name="Quantity">
+                        <p>$@(item.Figurine.Price * item.Quantity)</p>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <button type="submit" class="btn btn-outline-primary" asp-page-handler="update" asp-route-id="@item.FigurineID">
+                            Update
+                        </button>
+                        <button type="submit" class="btn btn-outline-danger" asp-page-handler="delete" asp-route-id="@item.FigurineID">
+                            Delete
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     }
     <div class="text-right">
-        <a href="/Shop" class="btn btn-outline-success" role="button">Go Back to Shopping</a>
+        <a href="/Products/Products" class="btn btn-outline-success" role="button">Go Back to Shopping</a>
     </div>
     <div class="text-right">
         <a href="/Checkout" class="btn btn-outline-success" role="button">Check Out</a>
