--- a/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
@@ -22,49 +22,48 @@
     <div class="col-md-6">
     <h1 style="text-align: center">@ViewData["Title"]</h1>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
            <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="Input.FirstName">First Name</label>
                 <input asp-for="Input.FirstName" type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-                <span asp-validation-for="Input.FirstName"></span>
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group col-md-6">
                 <label asp-for="Input.LastName">Last Name</label>
                 <input asp-for="Input.LastName" type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-                <span asp-validation-for="Input.LastName"></span>
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
         </div>
          <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="Input.Email">Email</label>
                 <input asp-for="Input.Email" type="email" class="form-control" id="inputEmail" placeholder="Email">
-                <span asp-validation-for="Input.Email"></span>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="Input.Username">Username</label>
                 <input asp-for="Input.Username" type="text" class="form-control" id="inputUsername" placeholder="Username">
-                <span asp-validation-for="Input.Username"></span>
+                <span asp-validation-for="Input.Username" class="text-danger"></span>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="Input.Password">Password</label>
                 <input asp-for="Input.Password" type="password" class="form-control" id="inputPassword" placeholder="Password">
-                <span asp-validation-for="Input.Password"></span>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group col-md-6">
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <input asp-for="Input.ConfirmPassword" type="password" class="form-control" id="inputCfmPassword" placeholder="Password">
-                <span asp-validation-for="Input.ConfirmPassword"></span>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Input.Address">Address</label>
             <input asp-for="Input.Address" type="text" class="form-control" id="inputAddress" placeholder="1234 Main Street..">
-            <span asp-validation-for="Input.Address"></span>
+            <span asp-validation-for="Input.Address" class="text-danger"></span>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -77,12 +76,11 @@
                     <option>East</option>
                     <option>West</option>
                 </select>
-                <span asp-validation-for="Input.Region"></span>
             </div>
             <div class="form-group col-md-6">
                 <label asp-for="Input.Zip">Postal Code</label>
                 <input asp-for="Input.Zip" type="text" class="form-control" id="inputPostalCode">
-                 <span asp-validation-for="Input.Zip"></span>
+                 <span asp-validation-for="Input.Zip" class="text-danger"></span>
             </div>
         </div>
         
