--- a/FigurineCuisine/Pages/Checkout/Cart.cshtml
+++ b/FigurineCuisine/Pages/Checkout/Cart.cshtml
@@ -43,6 +43,6 @@
         <a href="/Products/Products" class="btn btn-outline-success" role="button">Go Back to Shopping</a>
     </div>
     <div class="text-right" style="display: inline; float: right;">
-        <a href="/Checkout" class="btn btn-outline-success" role="button">Check Out</a>
+        <a href="/Checkout/OrderDetails" class="btn btn-outline-success" role="button">Check Out</a>
     </div>
 </div>
