--- a/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
+++ b/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
@@ -8,44 +8,40 @@
 }
 
 <div class="container">
-    <h1>Order Details</h1>
+    <h1>Credit Card Details</h1>
     <form method="post">
-        <div asp-validation-summary="All"></div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" asp-for="Input.Date">Purchased Date:</label>
             <label class="col-sm-2 col-form-label">@DateTime.Now.ToString("MM/dd/yyyy hh:mm tt")</label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" asp-for="Input.FirstName">First Name:</label>
-            <input asp-for="Input.FirstName" type="text" />
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" asp-for="Input.LastName">Last Name:</label>
-            <input asp-for="Input.LastName" type="text">
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" asp-for="Input.Address">Address:</label>
-            <input asp-for="Input.Address" type="text">
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" asp-for="Input.Country">Country:</label>
-            <input asp-for="Input.Country" type="text">
-        </div>
-        
-        <div class="form-group row">
-                <label class="col-sm-2 col-form-label" asp-for="Input.Zip">Zip:</label>
-                <input asp-for="Input.Zip" type="text">
         </div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" asp-for="Input.CreditCard">Payment:</label>
             <select asp-for="Input.CreditCard" asp-items="@Html.GetEnumSelectList(typeof(FigurineCuisine.Pages.Checkout.OrderDetailsModel.CreditCard))">
             </select>
         </div>
-        @*<div>
-            @await Component.InvokeAsync("MiniCart")
-        </div>*@
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" asp-for="Input.CardNumber">Card Number:</label>
+            <input asp-for="Input.CardNumber" type="text" />
+            <span class="text-danger" asp-validation-for="Input.CardNumber"></span>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" asp-for="Input.Name">Name on Card:</label>
+            <input asp-for="Input.Name" type="text" >
+            <span class="text-danger" asp-validation-for="Input.Name"></span>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" asp-for="Input.ExpiryDate">Expiry date:</label>
+            <input asp-for="Input.ExpiryDate" type="month" >
+            <span class="text-danger" asp-validation-for="Input.ExpiryDate"></span>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" asp-for="Input.SecurityCode">Security code:</label>
+            <input asp-for="Input.SecurityCode" type="password" >
+            <span class="text-danger" asp-validation-for="Input.SecurityCode"></span>
+        </div>
+
         <div class="text-right">
-            <a href="/Shop/Cart" class="btn btn-outline-warning" role="button">Return to Cart</a>
+            <a href="/Checkout/Cart" class="btn btn-outline-warning" role="button">Return to Cart</a>
             <button type="submit" class="btn btn-outline-success">Complete Order</button>
         </div>
     </form>
