--- a/FigurineCuisine/Pages/Checkout/Receipt.cshtml
+++ b/FigurineCuisine/Pages/Checkout/Receipt.cshtml
@@ -81,9 +81,8 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <button type="submit" class="btn btn-outline-success" asp-page-handler="delete" asp-route-id="" style="float: right; margin-right: 10px!important;">
-                                    Go back Shopping
-                                </button>
+                                <button type="submit" class="btn btn-outline-success">Go back Shopping</button>
+                                
                             </div>
                         </div>
                     </div>
