Added phonenum to registration and profile edit fields

--- a/FigurineCuisine/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -16,9 +16,30 @@
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
+                <label asp-for="Input.PhoneNumber">Phone Number</label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address">Address</label>
+                <input asp-for="Input.Address" class="form-control" />
+                <span asp-validation-for="Input.Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PostalCode">Postal Code</label>
+                <input asp-for="Input.PostalCode" class="form-control" />
+                <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Region">Region</label>
+                <select asp-for="Input.Region" id="inputRegion" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>North</option>
+                    <option>North-East</option>
+                    <option>Central</option>
+                    <option>East</option>
+                    <option>West</option>
+                </select>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
