--- a/FigurineCuisine/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,7 +4,20 @@
 @{
     ViewData["Title"] = "Log in";
 }
-
+<head>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    <script>
+    var onloadCallback = function(){
+        grecaptcha.render('divcaptcha', {
+            'sitekey': '6LdoIPwgAAAAAJyLjmo1zMMeYEEgeT9psjyqfzR4',
+            'callback' : function (response){
+                $('#txtcaptcha').val('t');
+            }
+        })
+    }
+    </script>
+</head>
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-6">
@@ -12,7 +25,6 @@
             <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Username"></label>
                     <input asp-for="Input.Username" class="form-control" />
@@ -32,6 +44,11 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <input asp-for="Input.Recaptcha" id="txtcaptcha" type="text" style="display:none" class="form-control" />
+                    <div id="divcaptcha"></div>
+                    <span asp-validation-for="Input.Recaptcha" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
                 <div class="form-group">
@@ -48,7 +65,7 @@
     <div class="col-md-6 col-md-offset-2">
         <div class="col-md-12" style="display: flex; justify-content:center">
             <br />
-            <img style="height: 80%; width: 80%" src="https://images.saymedia-content.com/.image/c_fit%2Ccs_srgb%2Cq_auto:eco%2Cw_620/MTc1MTEzMTczMTMxNzMyMDYz/why-are-autistic-people-drawn-to-anime.png" />
+            <img style="height: 80%; width: 80%" src="https://c0.wallpaperflare.com/preview/919/706/466/gautama-buddha-statue.jpg" />
         </div>
     </div>
 </div>
