--- a/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
@@ -40,6 +40,11 @@
                 <input asp-for="Input.Email" type="email" class="form-control" id="inputEmail" placeholder="Email">
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            <div class="form-group col-md-6">
+                <label asp-for="Input.PhoneNumber">Phone Number</label>
+                <input asp-for="Input.PhoneNumber" type="text" class="form-control" id="inputPhoneNumber" placeholder="Phone Number">
+                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -85,9 +90,11 @@
         </div>
         
         <div class="form-row">
-            <input asp-for="Input.Recaptcha" id="txtcaptcha" type="text" style="display:none" class="form-control" />
-            <div id="divcaptcha"></div>
-            <span asp-validation-for="Input.Recaptcha" class="text-danger"></span>
+            <div class="col-md-6">
+                <input asp-for="Input.Recaptcha" id="txtcaptcha" type="text" style="display:none" class="form-control" />
+                <div id="divcaptcha"></div>
+                <span asp-validation-for="Input.Recaptcha" class="text-danger"></span>
+            </div>
         </div>
         <br />
             <button type="submit" class="btn btn-primary">Register</button>
