--- a/FigurineCuisine/Pages/Figurines/Edit.cshtml
+++ b/FigurineCuisine/Pages/Figurines/Edit.cshtml
@@ -45,6 +45,16 @@
                 <span asp-validation-for="Figurine.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Figurine.Category" class="control-label"></label>
+                <input asp-for="Figurine.Category" class="form-control" />
+                <span asp-validation-for="Figurine.Category" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Figurine.Image" class="control-label"></label>
+                <input asp-for="Figurine.Image" class="form-control" />
+                <span asp-validation-for="Figurine.Image" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
