--- a/FigurineCuisine/Pages/Checkout/Cart.cshtml
+++ b/FigurineCuisine/Pages/Checkout/Cart.cshtml
@@ -42,7 +42,11 @@
     <div class="text-left" style="display: inline;">
         <a href="/Products/Products" class="btn btn-outline-success" role="button">Go Back to Shopping</a>
     </div>
-    <div class="text-right" style="display: inline; float: right;">
-        <a href="/Checkout/OrderDetails" class="btn btn-outline-success" role="button">Check Out</a>
-    </div>
+    @if (Model.CartItem.Count() > 0)
+    {
+        <div class="text-right" style="display: inline; float: right;">
+            <a href="/Checkout/OrderDetails" class="btn btn-outline-success" role="button">Check Out</a>
+        </div>
+    }
+    
 </div>
