--- a/FigurineCuisine/Pages/Shared/_Layout.cshtml
+++ b/FigurineCuisine/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>                        <li class="nav-item">
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Products/Products">Products</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +37,10 @@
                         @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAdministratorRole")).Succeeded)
                         {
                             <li class="nav-item">
-                                <a class="nav-link" href="/Figurines">Admin</a>
+                                <a class="nav-link" href="/Figurines">Figurines</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Audit">Logs</a>
                             </li>
                         }
                     </ul>
