--- a/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
+++ b/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
@@ -10,6 +10,7 @@
 <div class="container">
     <h1>Credit Card Details</h1>
     <form method="post">
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" asp-for="Input.Date">Purchased Date:</label>
             <label class="col-sm-2 col-form-label">@DateTime.Now.ToString("MM/dd/yyyy hh:mm tt")</label>
@@ -39,11 +40,14 @@
             <input asp-for="Input.SecurityCode" type="password" >
             <span class="text-danger" asp-validation-for="Input.SecurityCode"></span>
         </div>
+        @if (Model.appUser.TwoFactorEnabled)
+        {
         <div class="form-group row">
-            <label asp-for="Input.TwoFactorCode">Authentication Code</label>
+            <label class="col-sm-2 col-form-label" asp-for="Input.TwoFactorCode">Authentication Code</label>
             <input asp-for="Input.TwoFactorCode" class="form-control" autocomplete="off" />
             <span asp-validation-for="Input.TwoFactorCode" class="text-danger"></span>
         </div>
+        }
 
         <div class="text-right">
             <a href="/Checkout/Cart" class="btn btn-outline-warning" role="button">Return to Cart</a>
