--- a/FigurineCuisine/Pages/Products/ProductView.cshtml
+++ b/FigurineCuisine/Pages/Products/ProductView.cshtml
@@ -1,7 +1,9 @@
 ﻿@page "{id?}"
 @using Microsoft.AspNetCore.Identity
 @using FigurineCuisine.Models
+@using Microsoft.AspNetCore.Authorization
 @inject SignInManager<ApplicationUser> SignInManager
+@inject IAuthorizationService AuthorizationService
 
 @model FigurineCuisine.Pages.ProductViewModel
 @{
@@ -43,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row" style="margin-top: 60px">
             <div class="col-sm">
                 <img class="detail-img" src="@Model.selectedProduct.Image" width="350" />
             </div>
@@ -57,29 +59,39 @@
                     <p> $@Model.selectedProduct.Price</p>
                 </div>
                 <div class="row">
+                    <h6>Manufacturer:&nbsp;&nbsp;</h6>
+                    <p> @Model.selectedProduct.Manufacturer</p>
+                </div>
+                <div class="row">
+                    <h6>Brand:&nbsp;&nbsp;</h6>
+                    <p> @Model.selectedProduct.Brand</p>
+                </div>
+                <div class="row">
+                    <h6>Published Date:&nbsp;&nbsp;</h6>
+                    <p> @Model.selectedProduct.PublishedDate</p>
+                </div>
+                <div class="row">
                     @if (SignInManager.IsSignedIn(User))
                     {
                         <form id="add-to-cart "method="post">
-                            <div class="number">
+                            <div class="number" style="margin-top:40px">
                                 <input asp-for="Category" class="category" type="hidden" value="@Model.selectedProduct.Category" />
                                 <span class="minus">-</span>
                                 <input asp-for="Input.Quantity" class="quantity" type="text" value="1" />
                                 <span asp-validation-for="Input.Quantity" class="text-danger"></span>
                                 <span class="plus">+</span>
                                 <p>&nbsp;</p>
-                                <button class="btn btn-primary" type="submit">Add to Cart</button>
+                                @if ((await AuthorizationService.AuthorizeAsync(User, "RequireCustomerRole")).Succeeded)
+                                {
+                                    <button class="btn btn-primary" style="margin-top: 50px" type="submit">Add to Cart</button>
+                                }
                             </div>
                         </form>
                     }
                 </div>
             </div>
         </div>
-        <div class="row2">
-            <h6 class="description">Description:</h6>
-        </div>
-        <div class="row2">
-            <p>@Model.selectedProduct.Brand</p>
-        </div>
+        
     </div>
 </body>
 </html>
