--- a/FigurineCuisine/Pages/Figurines/Create.cshtml
+++ b/FigurineCuisine/Pages/Figurines/Create.cshtml
@@ -46,7 +46,7 @@
             <div class="form-group">
                 <label asp-for="Figurine.Category" class="control-label"></label>
                 <input asp-for="Figurine.Category" class="form-control" />
-                <span asp-validation-for="Figurine.Price" class="text-danger"></span>
+                <span asp-validation-for="Figurine.Category" class="text-danger"></span>
             </div>
              <div class="form-group">
                 <label asp-for="Figurine.PublishedDate" class="control-label"></label>
