--- a/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
@@ -22,6 +22,7 @@
     <div class="col-md-6">
     <h1 style="text-align: center">@ViewData["Title"]</h1>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+           <div asp-validation-summary="All" class="text-danger"></div>
            <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="Input.FirstName">First Name</label>
