--- a/FigurineCuisine/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Login.cshtml
@@ -23,6 +23,7 @@
     <div class="col-md-6">
         <section>
             <form id="account" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div class="form-group">
