--- a/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
+++ b/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
@@ -36,7 +36,7 @@
             <span class="text-danger" asp-validation-for="Input.ExpiryDate"></span>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label" asp-for="Input.SecurityCode">Security code:</label>
+            <label class="col-sm-2 col-form-label" asp-for="Input.SecurityCode">CVC</label>
             <input asp-for="Input.SecurityCode" type="password" >
             <span class="text-danger" asp-validation-for="Input.SecurityCode"></span>
         </div>
