removed authentication code in checkout

--- a/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
+++ b/FigurineCuisine/Pages/Checkout/OrderDetails.cshtml
@@ -40,13 +40,13 @@
             <input asp-for="Input.SecurityCode" type="password" >
             <span class="text-danger" asp-validation-for="Input.SecurityCode"></span>
         </div>
-        @if (Model.appUser.TwoFactorEnabled)
+        @*@if (Model.appUser.TwoFactorEnabled)
         {
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" asp-for="Input.TwoFactorCode">Authentication Code</label>
             <input asp-for="Input.TwoFactorCode" class="form-control" autocomplete="off" />
             <span asp-validation-for="Input.TwoFactorCode" class="text-danger"></span>
-        </div>
+        </div>*@
         }
 
         <div class="text-right">
