--- a/FigurineCuisine/Pages/Shared/_Layout.cshtml
+++ b/FigurineCuisine/Pages/Shared/_Layout.cshtml
@@ -43,6 +43,12 @@
                                 <a class="nav-link" href="/Audit">Logs</a>
                             </li>
                         }
+                        @if ((await AuthorizationService.AuthorizeAsync(User, "RequireSalespersonRole")).Succeeded)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Figurines">Figurines</a>
+                            </li>
+                        }
                     </ul>
                 </div>
                 <partial name="_LoginPartial" />
